--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -12,7 +12,7 @@
                     <i class="fas fa-microchip fa-fw"></i>
                 </nav>
                     <nav class="nav navbar-nav">
-                        <li class="presentation"><a class="h" href="index.jsp">Inicio</a></li>
+                        <li class="presentation"><a class="h" href="${srvUrl}">Inicio</a></li>
                         <li class="presentation"><a class="h" href="productos">Productos</a></li>
                         <li class="presentation"><a class="h" href="cesta.jsp">Cesta</a></li>
                         <li class="presentation"><a class="h" href="perfil.jsp">Acceder</a></li>
