--- a/src/main/webapp/WEB-INF/jspf/styles.jspf
+++ b/src/main/webapp/WEB-INF/jspf/styles.jspf
@@ -2,7 +2,7 @@
 <%@ page pageEncoding="UTF-8" %>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet"  type="text/css" href="css/estilo.css">
+<link rel="stylesheet"  type="text/css" href="${pageContext.request.contextPath}/css/estilo.css"/>
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
 <%--<link rel="icon" href="https://getbootstrap.com/favicon.ico">--%>
