--- a/src/main/webapp/WEB-INF/jspf/pie.jspf
+++ b/src/main/webapp/WEB-INF/jspf/pie.jspf
@@ -4,10 +4,11 @@
     Author     : José María del Águila López, Rafael Galán Ruiz
 --%>
 
-
+<footer class="footer">
     <nav class="navbar navbar-expand-md navbar-dark fixed-botton bg-dark">
         <div class="container">
             <h2>Desarrollo de Aplicaciones Web</h2>
             <h4>Proyecto: TienaInformatica</h4>
         </div>
     </nav>
+</footer>
