--- a/src/main/webapp/css/estilo.css
+++ b/src/main/webapp/css/estilo.css
@@ -60,3 +60,10 @@ hconf{
     font-family: 'Roboto Mono', monospace; 
     color:white;
 }
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+}
