--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -16,14 +16,14 @@
                     <nav class="nav navbar-nav">
                         <li class="presentation"><a class="h" href="<c:url value='/'/>">Inicio</a></li>
                         <li class="presentation"><a class="h" href="productos">Productos</a></li>
-                        <li class="presentation"><a class="h" href="<c:url value='/productos/cesta'/>">Cesta</a></li>
-                        <li class="presentation"><a class="h" href="clientes">Acceder</a></li>
+                        <li class="presentation"><a class="h" href="<c:url value='/productos/cesta'/>">Cesta</a></li>                        
+                        <li class="presentation"><a class="h" href="<c:url value='/clientes/perfil'/>">Acceder</a></li>
                     </nav>      
             </div>
         </div>
     </div>    
 </nav>
-<div class="jumbotron"><%--class="jumbotron"--%>
+<div class="jumbotron">
     <div class="container">
         <h1 class="hconf">ujaDAW</h1>
         <h2 class="hconf">Tienda en informática</h2>
