--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -15,7 +15,7 @@
                 </nav>
                     <nav class="nav navbar-nav">
                         <li class="presentation"><a class="h" href="<c:url value='/'/>">Inicio</a></li>
-                        <li class="presentation"><a class="h" href="productos">Productos</a></li>
+                        <li class="presentation"><a class="h" href="<c:url value='/productos'/>">Productos</a></li>
                         <li class="presentation"><a class="h" href="<c:url value='/productos/cesta'/>">Cesta</a></li>                        
                         <li class="presentation"><a class="h" href="<c:url value='/clientes/perfil'/>">Acceder</a></li>
                     </nav>      
