--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -17,14 +17,19 @@
                     <li class="presentation"><a class="h" href="<c:url value='/'/>">Inicio</a></li>
                     <li class="presentation"><a class="h" href="<c:url value='/productos'/>">Productos</a></li>
                     <li class="presentation"><a class="h" href="<c:url value='/productos/cesta'/>">Cesta</a></li>                        
-                    <li class="presentation"><a class="h" href="<c:url value='/clientes/perfil'/>">Acceder</a></li>
+                    <c:if test="${empty pageContext.request.remoteUser}">
+                        <li class="presentation"><a class="h" href="<c:url value='/clientes/perfil'/>">Acceder</a></li>
+                    </c:if>
+                    <c:if test="${not empty pageContext.request.remoteUser}">
+                        <li class="presentation"><a class="h" href="<c:url value='/clientes/perfil'/>">${pageContext.request.remoteUser}</a></li>
+                    </c:if>
                 </nav>      
             </div>
 
         </div>
     </div>  
     <c:if test="${not empty pageContext.request.remoteUser}">
-        <a class="nav-link border border-danger text-danger ml-md-auto" href="<c:url value="/Logout"/>">Desconectar ${pageContext.request.remoteUser}</a>
+        <a class="nav-link border border-danger text-danger ml-md-auto" href="<c:url value='/clientes/logout'/>">Desconectar ${pageContext.request.remoteUser}</a>
     </c:if>
 </nav>
 <div class="jumbotron">
